@@ -1,13 +1,13 @@
 Package: Cprob
-Title: Conditional probability function of a competing event
-Version: 1.2.4
+Title: The Conditional Probability Function of a Competing Event
+Version: 1.3
 Author: Arthur Allignol
-Description: Estimates the conditional probability function of a competing event, and fits, using the temporal process regression or the pseudo-value approach, a proportional-odds model to the conditional probability function
+Description: Permits to estimate the conditional probability function of a competing event, and to fit, using the temporal process regression or the pseudo-value approach, a proportional-odds model to the conditional probability function (or other models by specifying another link function). See <doi:10.1111/j.1467-9876.2010.00729.x>.
 Maintainer: Arthur Allignol <arthur.allignol@uni-ulm.de>
 Depends: prodlim
-Imports: tpr, geepack, lgtdl, lattice
+Imports: tpr, geepack, lgtdl, graphics, stats, lattice
 License: GPL (>= 2)
-Packaged: 2014-12-09 11:33:28 UTC; arthur
 NeedsCompilation: no
+Packaged: 2017-01-16 20:27:38 UTC; arthur
 Repository: CRAN
-Date/Publication: 2014-12-09 14:57:14
+Date/Publication: 2017-01-17 00:36:18
