@@ -1,22 +1,23 @@
-dca54694e1a4b4c683ccb5784e612d7d *ChangeLog
-6c6825dc30435864f40b2ca78841dd6b *DESCRIPTION
-6790710ae6db1e66bf0759fb7ac35774 *NAMESPACE
-6b44cb225db35a23635888a75f185a77 *R/cpf.R
+1b6091bc0e2240ccab71bf6307d185c0 *ChangeLog
+359140dc7cd0aefa8c45b8046f32e400 *DESCRIPTION
+4f0cc658605e4808078482ee25c8e24b *NAMESPACE
+a0ee3a7caa1441708ee326c402821826 *R/cpf.R
 f1989df17b8a7701da3f7bdc524588f4 *R/cpfpo.R
 0d93d036123d231d9a13deacdad55b7e *R/lines.cpf.R
 772fbd3d1d4ec435d7d7fcba26aaa8dd *R/plot.cpf.R
 87d3d4ac91140edb823f3693c3ebfba5 *R/predict.cpf.R
-04ad83086e17e65c8a3caf52f98dcf4a *R/print.cpf.R
+e8323e8b13b3b16336c986fd51beddf1 *R/print.cpf.R
 88c990cf05463f0412d3e03d8f63da42 *R/print.cpfpo.R
 113ce372cdb1be0acc9a7fb1d416bbb3 *R/print.pseudocpf.R
-8331b262833b3b41b94391106171c941 *R/print.summary.cpf.R
+f8a0241c0954ebebd0f4283d21e20496 *R/print.summary.cpf.R
 e2fc201f21103186c2e2b72db2b2d69b *R/pseudocpf.R
-18abb0fa0524fe71b7c563aa06298c24 *R/summary.cpf.R
+96ef48f927dadacb3771db6777e20be4 *R/summary.cpf.R
 d93d8389504ebb53081e469c24211189 *R/summary.pseudocpf.R
-0108c60876e4cf3182ab84f8e4bf0813 *R/xyplot.cpfpo.R
+0c3c45c388cb959319dadc30e695cdee *R/xyplot.cpfpo.R
+e7e50ac0213830eba1c399497ef2505d *README.md
 b2bcf94a987f374ea7ec8b8f079efa95 *data/mgus.txt.gz
 41b914ee1f5e28bc54da30d4dc4985b9 *man/Cprob-package.Rd
-9f0ad5652b0f428c7d5d858273de5820 *man/cpf.Rd
+db7f56948379c52c9e20bc57a4ba5c11 *man/cpf.Rd
 bd9c8712a3da690f59cf902ebce3a3d4 *man/cpfpo.Rd
 4e03e23926115b0e433eadb7e27505f7 *man/lines.cpf.Rd
 88acf234f5d6455ed261fca0b362e304 *man/mgus.Rd
@@ -29,4 +30,4 @@ f8e8619ec8d141c0565f002558d09e21 *man/predict.cpf.Rd
 f03dc6b922da30deeafc70f22c71b106 *man/summary.pseudocpf.Rd
 aa695148bae7fe6cdb7eceb5e7b58010 *man/xyplot.cpfpo.Rd
 452184f5bcaf7e910cb12b83af7d0090 *tests/tests.Cprob.R
-0a2d692ab42325f0f0371240bae5c464 *tests/tests.Cprob.Rout.save
+b81ea8ce54c19a0d3c76e48908574cd7 *tests/tests.Cprob.Rout.save
